--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "helmet": "^5.1.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "pg": "^8.7.3",
@@ -51,6 +53,7 @@
     "@types/hpp": "^0.2.2",
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/lodash": "^4.14.202",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.45",
     "@types/supertest": "^2.0.12",
