--- a/Base_project.postman_environment.json
+++ b/Base_project.postman_environment.json
@@ -25,9 +25,21 @@
 			"value": "",
 			"type": "default",
 			"enabled": true
+		},
+		{
+			"key": "jwt_token_admin",
+			"value": "",
+			"type": "default",
+			"enabled": true
+		},
+		{
+			"key": "jwt_token_doctor",
+			"value": "",
+			"type": "default",
+			"enabled": true
 		}
 	],
 	"_postman_variable_scope": "environment",
-	"_postman_exported_at": "2024-01-16T07:39:52.379Z",
-	"_postman_exported_using": "Postman/10.22.2"
+	"_postman_exported_at": "2024-01-26T07:56:15.262Z",
+	"_postman_exported_using": "Postman/10.22.6"
 }
