--- a/Doctor_Appointment.postman_collection.json
+++ b/Doctor_Appointment.postman_collection.json
@@ -11,7 +11,91 @@
 			"name": "Auth",
 			"item": [
 				{
-					"name": "Login",
+					"name": "Login_Admin",
+					"event": [
+						{
+							"listen": "test",
+							"script": {
+								"exec": [
+									"const response = pm.response.json();",
+									"pm.environment.set('jwt_token_admin', \"Bearer \" + response.data.accessToken);",
+									""
+								],
+								"type": "text/javascript"
+							}
+						}
+					],
+					"request": {
+						"method": "POST",
+						"header": [],
+						"body": {
+							"mode": "raw",
+							"raw": "{\n    \"email\": \"hoangvyanh2013@gmail.com\",\n    \"password\" : \"mothaibabonnam\"\n\n}",
+							"options": {
+								"raw": {
+									"language": "json"
+								}
+							}
+						},
+						"url": {
+							"raw": "{{protocol}}://{{domain}}:{{port}}/login",
+							"protocol": "{{protocol}}",
+							"host": [
+								"{{domain}}"
+							],
+							"port": "{{port}}",
+							"path": [
+								"login"
+							]
+						},
+						"description": "This is a POST request, submitting data to an API via the request body. This request submits JSON data, and the data is reflected in the response.\n\nA successful POST request typically returns a `200 OK` or `201 Created` response code."
+					},
+					"response": []
+				},
+				{
+					"name": "Login_Doctor",
+					"event": [
+						{
+							"listen": "test",
+							"script": {
+								"exec": [
+									"const response = pm.response.json();",
+									"pm.environment.set('jwt_token_doctor', \"Bearer \" + response.data.accessToken);",
+									""
+								],
+								"type": "text/javascript"
+							}
+						}
+					],
+					"request": {
+						"method": "POST",
+						"header": [],
+						"body": {
+							"mode": "raw",
+							"raw": "{\n\"email\": \"uongthivankieuct4@gmail.com\",\n  \"password\": \"09042001\"\n}",
+							"options": {
+								"raw": {
+									"language": "json"
+								}
+							}
+						},
+						"url": {
+							"raw": "{{protocol}}://{{domain}}:{{port}}/login",
+							"protocol": "{{protocol}}",
+							"host": [
+								"{{domain}}"
+							],
+							"port": "{{port}}",
+							"path": [
+								"login"
+							]
+						},
+						"description": "This is a POST request, submitting data to an API via the request body. This request submits JSON data, and the data is reflected in the response.\n\nA successful POST request typically returns a `200 OK` or `201 Created` response code."
+					},
+					"response": []
+				},
+				{
+					"name": "Login_Patient",
 					"event": [
 						{
 							"listen": "test",
@@ -30,7 +114,7 @@
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\n    \"email\": \"hoangvyanh2013@gmail.com\",\n  \"password\" : \"mothaibabonnam\"\n}",
+							"raw": "{\n\n    \"email\": \"uongthivankieu@gmail.com\",\n    \"password\": \"123456\"\n}",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -64,8 +148,7 @@
 							"listen": "test",
 							"script": {
 								"exec": [
-									"const response = pm.response.json();\r",
-									"pm.environment.set('jwt_token', \"Bearer \" + response.data.accessToken);"
+									""
 								],
 								"type": "text/javascript"
 							}
@@ -116,13 +199,13 @@
 						"header": [
 							{
 								"key": "Authorization",
-								"value": "{{jwt_token}}",
+								"value": "{{jwt_token_admin}}",
 								"type": "text"
 							}
 						],
 						"body": {
 							"mode": "raw",
-							"raw": "// {\r\n//   \"name\": \"hoangvy anh\",\r\n//   \"email\": \"uongthivankieuct4@gmail.com\",\r\n//   \"address\": \"Hà Nội\",\r\n//   \"phone\": \"03682134513\",\r\n//   \"gender\": true,\r\n//   \"dob\": \"09/04/2001\"\r\n// }",
+							"raw": "{\r\n  \"name\": \"hoang vy anh\",\r\n  \"email\": \"uongthivankieuct4@gmail.com\",\r\n  \"address\": \"Hà Nội\",\r\n  \"phone\": \"0368213451\",\r\n  \"gender\": true,\r\n  \"dob\": \"2001-04-09\" //YYYY/MM/DD\r\n}",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -150,7 +233,7 @@
 						"method": "GET",
 						"header": [],
 						"url": {
-							"raw": "{{protocol}}://{{domain}}:{{port}}/doctors/9430be4d-0b77-4a7b-8096-171bfb0c8023",
+							"raw": "{{protocol}}://{{domain}}:{{port}}/doctors/a47fb364-d96c-4251-a7a9-a01ad22a1a3d",
 							"protocol": "{{protocol}}",
 							"host": [
 								"{{domain}}"
@@ -158,7 +241,7 @@
 							"port": "{{port}}",
 							"path": [
 								"doctors",
-								"9430be4d-0b77-4a7b-8096-171bfb0c8023"
+								"a47fb364-d96c-4251-a7a9-a01ad22a1a3d"
 							],
 							"query": [
 								{
@@ -183,7 +266,7 @@
 							}
 						],
 						"url": {
-							"raw": "{{protocol}}://{{domain}}:{{port}}/doctors/?name=hoangvy",
+							"raw": "{{protocol}}://{{domain}}:{{port}}/doctors/",
 							"protocol": "{{protocol}}",
 							"host": [
 								"{{domain}}"
@@ -192,12 +275,6 @@
 							"path": [
 								"doctors",
 								""
-							],
-							"query": [
-								{
-									"key": "name",
-									"value": "hoangvy"
-								}
 							]
 						}
 					},
@@ -210,13 +287,13 @@
 						"header": [
 							{
 								"key": "Authorization",
-								"value": "{{jwt_token}}",
+								"value": "{{jwt_token_admin}}",
 								"type": "text"
 							}
 						],
 						"body": {
 							"mode": "raw",
-							"raw": "{\r\n    \"id\": \"5acfe26c-df15-4d92-9021-c56195e8fdd1\",\r\n    \"email\": \"uongthivankieuct4@gmail.com\",\r\n    \"name\": \"hoangvy\",\r\n    \"price\": 123000,\r\n    \"services\": \"khasm benh\"\r\n}",
+							"raw": "{\r\n    \"email\": \"uongthivankieuct4@gmail.com\",\r\n    \"name\": \"Uông Thị Vân Kiều\",\r\n    \"price\": 123000,\r\n    \"services\": \"online và offline\"\r\n}",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -224,7 +301,7 @@
 							}
 						},
 						"url": {
-							"raw": "{{protocol}}://{{domain}}:{{port}}/doctors/9430be4d-0b77-4a7b-8096-171bfb0c8023",
+							"raw": "{{protocol}}://{{domain}}:{{port}}/doctors/a47fb364-d96c-4251-a7a9-a01ad22a1a3d",
 							"protocol": "{{protocol}}",
 							"host": [
 								"{{domain}}"
@@ -232,7 +309,7 @@
 							"port": "{{port}}",
 							"path": [
 								"doctors",
-								"9430be4d-0b77-4a7b-8096-171bfb0c8023"
+								"a47fb364-d96c-4251-a7a9-a01ad22a1a3d"
 							]
 						}
 					},
@@ -245,12 +322,12 @@
 						"header": [
 							{
 								"key": "Authorization",
-								"value": "{{jwt_token}}",
+								"value": "{{jwt_token_admin}}",
 								"type": "text"
 							}
 						],
 						"url": {
-							"raw": "{{protocol}}://{{domain}}:{{port}}/doctors/5acfe26c-df15-4d92-9021-c56195e8fdd1",
+							"raw": "{{protocol}}://{{domain}}:{{port}}/doctors/7ac9d1e7-3906-453c-bff4-d8ee77af8ce2",
 							"protocol": "{{protocol}}",
 							"host": [
 								"{{domain}}"
@@ -258,7 +335,7 @@
 							"port": "{{port}}",
 							"path": [
 								"doctors",
-								"5acfe26c-df15-4d92-9021-c56195e8fdd1"
+								"7ac9d1e7-3906-453c-bff4-d8ee77af8ce2"
 							]
 						}
 					},
@@ -276,12 +353,12 @@
 						"header": [
 							{
 								"key": "Authorization",
-								"value": "{{jwt_token}}",
+								"value": "{{jwt_token_admin}}",
 								"type": "text"
 							}
 						],
 						"url": {
-							"raw": "{{protocol}}://{{domain}}:{{port}}/admin/7a8d863f-bf37-46d2-9e99-d0b12b149f4e",
+							"raw": "{{protocol}}://{{domain}}:{{port}}/admin/ae744709-0eb3-4266-9fab-81b2679fe5b8",
 							"protocol": "{{protocol}}",
 							"host": [
 								"{{domain}}"
@@ -289,7 +366,7 @@
 							"port": "{{port}}",
 							"path": [
 								"admin",
-								"7a8d863f-bf37-46d2-9e99-d0b12b149f4e"
+								"ae744709-0eb3-4266-9fab-81b2679fe5b8"
 							],
 							"query": [
 								{
@@ -309,7 +386,7 @@
 						"header": [
 							{
 								"key": "Authorization",
-								"value": "{{jwt_token}}",
+								"value": "{{jwt_token_admin}}",
 								"type": "text"
 							}
 						],
@@ -335,13 +412,13 @@
 						"header": [
 							{
 								"key": "Authorization",
-								"value": "{{jwt_token}}",
+								"value": "{{jwt_token_admin}}",
 								"type": "text"
 							}
 						],
 						"body": {
 							"mode": "raw",
-							"raw": "{\r\n    \"emsail\": \"uongthivankieuct4@gmail.com\",\r\n    \"name\": \"hoangvy\"\r\n}",
+							"raw": "{\r\n    \"emsail\": \"uongthivankieuct4@gmail.com\",\r\n    \"name\": \"hoang vy anh\"\r\n}",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -349,7 +426,7 @@
 							}
 						},
 						"url": {
-							"raw": "{{protocol}}://{{domain}}:{{port}}/admin/7a8d863f-bf37-46d2-9e99-d0b12b149f4e",
+							"raw": "{{protocol}}://{{domain}}:{{port}}/admin/ae744709-0eb3-4266-9fab-81b2679fe5b8",
 							"protocol": "{{protocol}}",
 							"host": [
 								"{{domain}}"
@@ -357,7 +434,7 @@
 							"port": "{{port}}",
 							"path": [
 								"admin",
-								"7a8d863f-bf37-46d2-9e99-d0b12b149f4e"
+								"ae744709-0eb3-4266-9fab-81b2679fe5b8"
 							]
 						}
 					},
@@ -370,7 +447,7 @@
 						"header": [
 							{
 								"key": "Authorization",
-								"value": "{{jwt_token}}",
+								"value": "{{jwt_token_admin}}",
 								"type": "text"
 							}
 						],
@@ -410,7 +487,7 @@
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\n    \"email\": \"hoangvyanh2013@gmail.com\",\n  \"password\" : \"mothaibabonnam\",\n  \"name\" : \"Vy anh\",\n  \"phoneNumber\": \"0368134531\",\n  \"address\" : \"HN\"\n}",
+							"raw": "{\n    \"email\": \"hoangvyanh2013@gmail.com\",\n    \"password\" : \"mothaibabonnam\",\n    \"name\" : \"Vy anh\",\n    \"phoneNumber\": \"0368134532\",\n    \"address\" : \"HN\"\n}",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -450,15 +527,15 @@
 							}
 						],
 						"url": {
-							"raw": "{{protocol}}://{{domain}}:{{port}}/admin/7a8d863f-bf37-46d2-9e99-d0b12b149f4e",
+							"raw": "{{protocol}}://{{domain}}:{{port}}/patient/367cfa04-43f7-4c57-8b03-f887714c8a15",
 							"protocol": "{{protocol}}",
 							"host": [
 								"{{domain}}"
 							],
 							"port": "{{port}}",
 							"path": [
-								"admin",
-								"7a8d863f-bf37-46d2-9e99-d0b12b149f4e"
+								"patient",
+								"367cfa04-43f7-4c57-8b03-f887714c8a15"
 							],
 							"query": [
 								{
@@ -472,25 +549,25 @@
 					"response": []
 				},
 				{
-					"name": "GetAllAdmin",
+					"name": "GetAllPatient",
 					"request": {
 						"method": "GET",
 						"header": [
 							{
 								"key": "Authorization",
-								"value": "{{jwt_token}}",
+								"value": "{{jwt_token_admin}}",
 								"type": "text"
 							}
 						],
 						"url": {
-							"raw": "{{protocol}}://{{domain}}:{{port}}/admin/",
+							"raw": "{{protocol}}://{{domain}}:{{port}}/patient/",
 							"protocol": "{{protocol}}",
 							"host": [
 								"{{domain}}"
 							],
 							"port": "{{port}}",
 							"path": [
-								"admin",
+								"patient",
 								""
 							]
 						}
@@ -510,7 +587,7 @@
 						],
 						"body": {
 							"mode": "raw",
-							"raw": "{\r\n    \"emsail\": \"uongthivankieuct4@gmail.com\",\r\n    \"name\": \"hoangvy\"\r\n}",
+							"raw": "{\r\n    \"email\": \"uongthivankieuct4@gmail.com\",\r\n    \"name\": \"Uông Thị Vân Kiều\"\r\n}",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -518,7 +595,7 @@
 							}
 						},
 						"url": {
-							"raw": "{{protocol}}://{{domain}}:{{port}}/patient/7a8d863f-bf37-46d2-9e99-d0b12b149f4e",
+							"raw": "{{protocol}}://{{domain}}:{{port}}/patient/367cfa04-43f7-4c57-8b03-f887714c8a15",
 							"protocol": "{{protocol}}",
 							"host": [
 								"{{domain}}"
@@ -526,7 +603,7 @@
 							"port": "{{port}}",
 							"path": [
 								"patient",
-								"7a8d863f-bf37-46d2-9e99-d0b12b149f4e"
+								"367cfa04-43f7-4c57-8b03-f887714c8a15"
 							]
 						}
 					},
@@ -544,15 +621,15 @@
 							}
 						],
 						"url": {
-							"raw": "{{protocol}}://{{domain}}:{{port}}/admin/",
+							"raw": "{{protocol}}://{{domain}}:{{port}}/patient/13ff135b-b3f9-4b1a-9a11-37a38ba10cd4",
 							"protocol": "{{protocol}}",
 							"host": [
 								"{{domain}}"
 							],
 							"port": "{{port}}",
 							"path": [
-								"admin",
-								""
+								"patient",
+								"13ff135b-b3f9-4b1a-9a11-37a38ba10cd4"
 							]
 						}
 					},
@@ -579,7 +656,7 @@
 						"header": [],
 						"body": {
 							"mode": "raw",
-							"raw": "{\n  \"name\": \"hoang vy anh\",\n  \"email\": \"uongthivankieuct4@gmail.com\",\n  \"address\": \"Hà Nội\",\n  \"phone\": \"03682134513\",\n  \"gender\": true,\n  \"dob\": \"09/04/2001\"\n}",
+							"raw": "{\n  \"name\": \"hoang vy anh\",\n  \"email\": \"uongthivankieu@gmail.com\",\n  \"password\": \"123456\",\n  \"address\": \"Hà Nội\",\n  \"phone\": \"03682134513\",\n  \"gender\": true,\n  \"dob\": \"2001-04-09\"\n}",
 							"options": {
 								"raw": {
 									"language": "json"
@@ -599,6 +676,223 @@
 							]
 						},
 						"description": "This is a POST request, submitting data to an API via the request body. This request submits JSON data, and the data is reflected in the response.\n\nA successful POST request typically returns a `200 OK` or `201 Created` response code."
+					},
+					"response": []
+				}
+			]
+		},
+		{
+			"name": "DoctorTimeSlot",
+			"item": [
+				{
+					"name": "subscribe",
+					"request": {
+						"method": "POST",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "{{jwt_token_doctor}}",
+								"type": "text"
+							}
+						],
+						"body": {
+							"mode": "raw",
+							"raw": "{\r\n  \"day\": \"2022-12-16\",\r\n  \"listTime\": [\r\n    {\r\n      \"timeSlot\": \"T3\",\r\n      \"maximumPatient\": 20\r\n    },\r\n    {\r\n      \"timeSlot\": \"T5\",\r\n      \"maximumPatient\": 5\r\n    },\r\n    {\r\n      \"timeSlot\": \"T4\",\r\n      \"maximumPatient\": 9\r\n    }\r\n  ]\r\n  \r\n}",
+							"options": {
+								"raw": {
+									"language": "json"
+								}
+							}
+						},
+						"url": {
+							"raw": "{{protocol}}://{{domain}}:{{port}}/doctorTimeSlot/subscribe",
+							"protocol": "{{protocol}}",
+							"host": [
+								"{{domain}}"
+							],
+							"port": "{{port}}",
+							"path": [
+								"doctorTimeSlot",
+								"subscribe"
+							],
+							"query": [
+								{
+									"key": "id",
+									"value": "1231",
+									"disabled": true
+								}
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "getDoctorTimeSlotByPatient",
+					"protocolProfileBehavior": {
+						"disableBodyPruning": true
+					},
+					"request": {
+						"method": "GET",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "{{jwt_token}}",
+								"type": "text"
+							}
+						],
+						"body": {
+							"mode": "raw",
+							"raw": "\r\n  {\r\n    \"day\": \"2022-12-15\"\r\n  }",
+							"options": {
+								"raw": {
+									"language": "json"
+								}
+							}
+						},
+						"url": {
+							"raw": "{{protocol}}://{{domain}}:{{port}}/doctorTimeSlot/appointment-time/a47fb364-d96c-4251-a7a9-a01ad22a1a3d?day=2022-12-16",
+							"protocol": "{{protocol}}",
+							"host": [
+								"{{domain}}"
+							],
+							"port": "{{port}}",
+							"path": [
+								"doctorTimeSlot",
+								"appointment-time",
+								"a47fb364-d96c-4251-a7a9-a01ad22a1a3d"
+							],
+							"query": [
+								{
+									"key": "day",
+									"value": "2022-12-16"
+								}
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "GetTimeSlotByAmin",
+					"request": {
+						"method": "GET",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "{{jwt_token_admin}}",
+								"type": "text"
+							}
+						],
+						"url": {
+							"raw": "{{protocol}}://{{domain}}:{{port}}/doctorTimeSlot/all/a47fb364-d96c-4251-a7a9-a01ad22a1a3d?startDay=2022-12-15&endDay=2022-12-15",
+							"protocol": "{{protocol}}",
+							"host": [
+								"{{domain}}"
+							],
+							"port": "{{port}}",
+							"path": [
+								"doctorTimeSlot",
+								"all",
+								"a47fb364-d96c-4251-a7a9-a01ad22a1a3d"
+							],
+							"query": [
+								{
+									"key": "startDay",
+									"value": "2022-12-15"
+								},
+								{
+									"key": "endDay",
+									"value": "2022-12-15"
+								}
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "GetMyOwnTimeSlots",
+					"request": {
+						"method": "GET",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "{{jwt_token_doctor}}",
+								"type": "text"
+							}
+						],
+						"url": {
+							"raw": "{{protocol}}://{{domain}}:{{port}}/doctorTimeSlot/",
+							"protocol": "{{protocol}}",
+							"host": [
+								"{{domain}}"
+							],
+							"port": "{{port}}",
+							"path": [
+								"doctorTimeSlot",
+								""
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "changeDoctorTimeSlotStatus",
+					"request": {
+						"method": "POST",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "{{jwt_token_admin}}",
+								"type": "text"
+							}
+						],
+						"body": {
+							"mode": "raw",
+							"raw": "{\r\n    \"isPublic\": true\r\n}",
+							"options": {
+								"raw": {
+									"language": "json"
+								}
+							}
+						},
+						"url": {
+							"raw": "{{protocol}}://{{domain}}:{{port}}/doctorTimeSlot/change-status/4",
+							"protocol": "{{protocol}}",
+							"host": [
+								"{{domain}}"
+							],
+							"port": "{{port}}",
+							"path": [
+								"doctorTimeSlot",
+								"change-status",
+								"4"
+							]
+						}
+					},
+					"response": []
+				},
+				{
+					"name": "deleteDoctorTimeSlot",
+					"request": {
+						"method": "DELETE",
+						"header": [
+							{
+								"key": "Authorization",
+								"value": "{{jwt_token_doctor}}",
+								"type": "text"
+							}
+						],
+						"url": {
+							"raw": "{{protocol}}://{{domain}}:{{port}}/doctorTimeSlot/1",
+							"protocol": "{{protocol}}",
+							"host": [
+								"{{domain}}"
+							],
+							"port": "{{port}}",
+							"path": [
+								"doctorTimeSlot",
+								"1"
+							]
+						}
 					},
 					"response": []
 				}
