--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mysql": "^2.18.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "stripe": "^14.19.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.5.0",
     "typedi": "^0.10.0",
